[gd_scene load_steps=8 format=3 uid="uid://og67qjuev08k"]

[ext_resource type="Script" uid="uid://d22do6aaw1qih" path="res://scenes/binder/individual_income_stream_page.gd" id="1_vns1v"]
[ext_resource type="LabelSettings" uid="uid://djkpwc0lasqli" path="res://desk/Resumes/resume_label.tres" id="2_vns1v"]
[ext_resource type="PackedScene" uid="uid://bfrnsyoqv7rcs" path="res://scenes/binder/summary_income_stream_view.tscn" id="3_midxx"]
[ext_resource type="PackedScene" uid="uid://b5kfuahvbhjn1" path="res://ui/capacity_row.tscn" id="4_vns1v"]
[ext_resource type="PackedScene" uid="uid://bwey7fsjlbv0i" path="res://scenes/binder/idle_event_view.tscn" id="5_dcgje"]
[ext_resource type="LabelSettings" uid="uid://di5o3x4joi7mt" path="res://desk/Resumes/danger_label.tres" id="6_1om3t"]
[ext_resource type="PackedScene" uid="uid://euex01opw2ii" path="res://ui/income_stream_view.tscn" id="6_midxx"]

[node name="IndividualIncomeStreamPage" type="Control" node_paths=PackedStringArray("capacity_row")]
layout_mode = 3
anchors_preset = 0
scale = Vector2(4.656634, 4.6512938)
script = ExtResource("1_vns1v")
capacity_row = NodePath("CapacityRow")

[node name="IncomeStreamView" parent="." instance=ExtResource("6_midxx")]
position = Vector2(7.5161567, 6.8798018)
scale = Vector2(0.3591083, 0.37398738)

[node name="SummaryIncomeStreamView" parent="." instance=ExtResource("3_midxx")]
layout_mode = 0
offset_left = 20.401003
offset_top = 85.5676
offset_right = 20.401003
offset_bottom = 85.5676
scale = Vector2(0.3247102, 0.3247102)

[node name="CapacityRow" parent="." instance=ExtResource("4_vns1v")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 20.615726
offset_top = 118.46166
offset_right = 152.61572
offset_bottom = 168.46167
scale = Vector2(0.2830997, 0.29768243)

[node name="IdleEvents" type="Control" parent="."]
anchors_preset = 0
offset_left = -116.60784
offset_top = 110.29189
offset_right = -76.60784
offset_bottom = 150.2919

[node name="IdleEventView" parent="IdleEvents" instance=ExtResource("5_dcgje")]
layout_mode = 0
offset_left = 144.09546
offset_top = 46.868683
offset_right = 256.78366
offset_bottom = 86.86869
scale = Vector2(0.1586053, 0.2138672)

[node name="ResolutionFailedLabel" type="Label" parent="IdleEvents"]
visible = false
layout_mode = 0
offset_left = 35.286205
offset_top = 78.74698
offset_right = 331.2862
offset_bottom = 101.74698
scale = Vector2(0.22161491, 0.46712258)
text = "Resolution Failed. Try again next week"
label_settings = ExtResource("6_1om3t")

[node name="ResolutionSuccessfulLabel" type="Label" parent="IdleEvents"]
visible = false
layout_mode = 0
offset_left = 35.513824
offset_top = 78.74697
offset_right = 216.51384
offset_bottom = 101.74697
scale = Vector2(0.35882306, 0.42798993)
text = "This has been resolved!"
label_settings = ExtResource("2_vns1v")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 3.865453
offset_top = 104.917046
offset_right = 21.865454
offset_bottom = 135.91705
text = "<"

[connection signal="on_assign_workers_button_pressed" from="CapacityRow" to="." method="_on_capacity_row_on_assign_workers_button_pressed"]
[connection signal="on_unassign_workers_button_pressed" from="CapacityRow" to="." method="_on_capacity_row_on_unassign_workers_button_pressed"]
[connection signal="on_abandon_button_pressed" from="IdleEvents/IdleEventView" to="." method="_on_idle_event_view_on_abandon_button_pressed"]
[connection signal="on_attempt_to_resolve_button_pressed" from="IdleEvents/IdleEventView" to="." method="_on_idle_event_view_on_attempt_to_resolve_button_pressed"]
[connection signal="button_up" from="BackButton" to="." method="_on_back_button_button_up"]
